Fri Jul 11 16:45:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (gvar): make global/static variables list.

Fri Jul 11 16:16:43 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_accept, rb_w32_socket, rb_w32_socketpair):
	  prohibit inheritance of sockets, too. [experimental]

Fri Jul 11 15:01:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_run_exec_options): default to thread cwd.

Fri Jul 11 14:39:49 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): the measures for Vista is no longer
	  unnecessary.

Fri Jul 11 06:45:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_thread_t): per-thread cwd support.  [EXPERIMENTAL]

	* io.c (rb_sysopen), dir.c (dir_s_chdir),
	  file.c (ruby_readlink, ruby_absolute_path_p),
	  thread.c (thread_create_core, ruby_thread_getcwd, ruby_getcwd),
	  vm.c (Init_VM): ditto.

	* string.c (rb_str_wrap): wrap a heap pointer with string.

	* thread.c (ruby_system_alone): returns if only current VM is running.

Fri Jul 11 06:44:06 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (fcntl.h): needed for AT_FDCWD.

	* dir.c (rb_dir_mkdir, rb_dir_unlink, rb_dir_rmdir): fix for dirfd().

Fri Jul 11 06:26:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_get_coverages): return VM specific data instead of the
	  pointer to it.

Fri Jul 11 06:16:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (process.o): depends on util.h.

Fri Jul 11 05:07:46 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (pipe): prohibit inheritance.
	  fixed: [ruby-dev:35421]

Fri Jul 11 00:56:46 2008  Koichi Sasada  <ko1@atdot.net>

	* thread.c (thread_create_core): fix GC problem.
	  [ruby-core:17669]

Thu Jul 10 22:06:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pstore.rb (PStore#transaction): return the result from the
	  block.  [ruby-core:17718]

Thu Jul 10 21:15:49 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>
